feat: failure cascade follow-ups — success recording, dispatch-time exhaustion, stage reset cleanup, failure goal fix, codec registration fix
Closes #514, Closes #517, Closes #520, Closes #522, Closes #534, Closes #535

- Record success outcome in _outcomes after reroute (observability)
- Auto-exhaust PlanItem when all candidates excluded during dispatch
- Clear _outcomes entries on repeatable stage reset (StageResetOutcomesCleaner)
- Failure goals now produce FAULTED, not COMPLETED (GoalReachedEventHandler)
- Guard codec registration against duplicate Vert.x instance in @QuarkusTest
- Update ReactiveCaseMemoryStore import after platform API move
- Sync CLAUDE.md with new conventions